src/antlr/SolidityParser.ts
// Generated from ./src/antlr/Solidity.g4 by ANTLR 4.7.3-SNAPSHOT


import { ATN } from "antlr4ts/atn/ATN";
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException";
import { NotNull } from "antlr4ts/Decorators";
import { NoViableAltException } from "antlr4ts/NoViableAltException";
import { Override } from "antlr4ts/Decorators";
import { Parser } from "antlr4ts/Parser";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator";
import { ParseTreeListener } from "antlr4ts/tree/ParseTreeListener";
import { ParseTreeVisitor } from "antlr4ts/tree/ParseTreeVisitor";
import { RecognitionException } from "antlr4ts/RecognitionException";
import { RuleContext } from "antlr4ts/RuleContext";
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { TerminalNode } from "antlr4ts/tree/TerminalNode";
import { Token } from "antlr4ts/Token";
import { TokenStream } from "antlr4ts/TokenStream";
import { Vocabulary } from "antlr4ts/Vocabulary";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl";

import * as Utils from "antlr4ts/misc/Utils";

import { SolidityListener } from "./SolidityListener";
import { SolidityVisitor } from "./SolidityVisitor";


export class SolidityParser extends Parser {
	public static readonly T__0 = 1;
	public static readonly T__1 = 2;
	public static readonly T__2 = 3;
	public static readonly T__3 = 4;
	public static readonly T__4 = 5;
	public static readonly T__5 = 6;
	public static readonly T__6 = 7;
	public static readonly T__7 = 8;
	public static readonly T__8 = 9;
	public static readonly T__9 = 10;
	public static readonly T__10 = 11;
	public static readonly T__11 = 12;
	public static readonly T__12 = 13;
	public static readonly T__13 = 14;
	public static readonly T__14 = 15;
	public static readonly T__15 = 16;
	public static readonly T__16 = 17;
	public static readonly T__17 = 18;
	public static readonly T__18 = 19;
	public static readonly T__19 = 20;
	public static readonly T__20 = 21;
	public static readonly T__21 = 22;
	public static readonly T__22 = 23;
	public static readonly T__23 = 24;
	public static readonly T__24 = 25;
	public static readonly T__25 = 26;
	public static readonly T__26 = 27;
	public static readonly T__27 = 28;
	public static readonly T__28 = 29;
	public static readonly T__29 = 30;
	public static readonly T__30 = 31;
	public static readonly T__31 = 32;
	public static readonly T__32 = 33;
	public static readonly T__33 = 34;
	public static readonly T__34 = 35;
	public static readonly T__35 = 36;
	public static readonly T__36 = 37;
	public static readonly T__37 = 38;
	public static readonly T__38 = 39;
	public static readonly T__39 = 40;
	public static readonly T__40 = 41;
	public static readonly T__41 = 42;
	public static readonly T__42 = 43;
	public static readonly T__43 = 44;
	public static readonly T__44 = 45;
	public static readonly T__45 = 46;
	public static readonly T__46 = 47;
	public static readonly T__47 = 48;
	public static readonly T__48 = 49;
	public static readonly T__49 = 50;
	public static readonly T__50 = 51;
	public static readonly T__51 = 52;
	public static readonly T__52 = 53;
	public static readonly T__53 = 54;
	public static readonly T__54 = 55;
	public static readonly T__55 = 56;
	public static readonly T__56 = 57;
	public static readonly T__57 = 58;
	public static readonly T__58 = 59;
	public static readonly T__59 = 60;
	public static readonly T__60 = 61;
	public static readonly T__61 = 62;
	public static readonly T__62 = 63;
	public static readonly T__63 = 64;
	public static readonly T__64 = 65;
	public static readonly T__65 = 66;
	public static readonly T__66 = 67;
	public static readonly T__67 = 68;
	public static readonly T__68 = 69;
	public static readonly T__69 = 70;
	public static readonly T__70 = 71;
	public static readonly T__71 = 72;
	public static readonly T__72 = 73;
	public static readonly T__73 = 74;
	public static readonly T__74 = 75;
	public static readonly T__75 = 76;
	public static readonly T__76 = 77;
	public static readonly T__77 = 78;
	public static readonly T__78 = 79;
	public static readonly T__79 = 80;
	public static readonly T__80 = 81;
	public static readonly T__81 = 82;
	public static readonly T__82 = 83;
	public static readonly T__83 = 84;
	public static readonly T__84 = 85;
	public static readonly T__85 = 86;
	public static readonly T__86 = 87;
	public static readonly T__87 = 88;
	public static readonly T__88 = 89;
	public static readonly T__89 = 90;
	public static readonly T__90 = 91;
	public static readonly T__91 = 92;
	public static readonly T__92 = 93;
	public static readonly T__93 = 94;
	public static readonly Int = 95;
	public static readonly Uint = 96;
	public static readonly Byte = 97;
	public static readonly Fixed = 98;
	public static readonly Ufixed = 99;
	public static readonly VersionLiteral = 100;
	public static readonly BooleanLiteral = 101;
	public static readonly DecimalNumber = 102;
	public static readonly HexNumber = 103;
	public static readonly NumberUnit = 104;
	public static readonly HexLiteral = 105;
	public static readonly ReservedKeyword = 106;
	public static readonly AnonymousKeyword = 107;
	public static readonly BreakKeyword = 108;
	public static readonly ConstantKeyword = 109;
	public static readonly ContinueKeyword = 110;
	public static readonly ExternalKeyword = 111;
	public static readonly IndexedKeyword = 112;
	public static readonly InternalKeyword = 113;
	public static readonly PayableKeyword = 114;
	public static readonly PrivateKeyword = 115;
	public static readonly PublicKeyword = 116;
	public static readonly PureKeyword = 117;
	public static readonly ViewKeyword = 118;
	public static readonly Identifier = 119;
	public static readonly StringLiteral = 120;
	public static readonly WS = 121;
	public static readonly COMMENT = 122;
	public static readonly LINE_COMMENT = 123;
	public static readonly RULE_sourceUnit = 0;
	public static readonly RULE_pragmaDirective = 1;
	public static readonly RULE_pragmaName = 2;
	public static readonly RULE_pragmaValue = 3;
	public static readonly RULE_version = 4;
	public static readonly RULE_versionOperator = 5;
	public static readonly RULE_versionConstraint = 6;
	public static readonly RULE_importDeclaration = 7;
	public static readonly RULE_standardDefinition = 8;
	public static readonly RULE_constraint = 9;
	public static readonly RULE_importDirective = 10;
	public static readonly RULE_contractDefinition = 11;
	public static readonly RULE_inheritanceSpecifier = 12;
	public static readonly RULE_contractPart = 13;
	public static readonly RULE_stateVariableDeclaration = 14;
	public static readonly RULE_usingForDeclaration = 15;
	public static readonly RULE_structDefinition = 16;
	public static readonly RULE_constructorDefinition = 17;
	public static readonly RULE_modifierDefinition = 18;
	public static readonly RULE_modifierInvocation = 19;
	public static readonly RULE_functionDefinition = 20;
	public static readonly RULE_returnParameters = 21;
	public static readonly RULE_modifierList = 22;
	public static readonly RULE_eventDefinition = 23;
	public static readonly RULE_enumValue = 24;
	public static readonly RULE_enumDefinition = 25;
	public static readonly RULE_parameterList = 26;
	public static readonly RULE_parameter = 27;
	public static readonly RULE_eventParameterList = 28;
	public static readonly RULE_eventParameter = 29;
	public static readonly RULE_functionTypeParameterList = 30;
	public static readonly RULE_functionTypeParameter = 31;
	public static readonly RULE_variableDeclaration = 32;
	public static readonly RULE_typeName = 33;
	public static readonly RULE_userDefinedTypeName = 34;
	public static readonly RULE_mapping = 35;
	public static readonly RULE_functionTypeName = 36;
	public static readonly RULE_storageLocation = 37;
	public static readonly RULE_stateMutability = 38;
	public static readonly RULE_block = 39;
	public static readonly RULE_statement = 40;
	public static readonly RULE_expressionStatement = 41;
	public static readonly RULE_ifStatement = 42;
	public static readonly RULE_whileStatement = 43;
	public static readonly RULE_simpleStatement = 44;
	public static readonly RULE_forStatement = 45;
	public static readonly RULE_inlineAssemblyStatement = 46;
	public static readonly RULE_doWhileStatement = 47;
	public static readonly RULE_continueStatement = 48;
	public static readonly RULE_breakStatement = 49;
	public static readonly RULE_returnStatement = 50;
	public static readonly RULE_throwStatement = 51;
	public static readonly RULE_emitStatement = 52;
	public static readonly RULE_variableDeclarationStatement = 53;
	public static readonly RULE_variableDeclarationList = 54;
	public static readonly RULE_identifierList = 55;
	public static readonly RULE_elementaryTypeName = 56;
	public static readonly RULE_expression = 57;
	public static readonly RULE_forAllExpression = 58;
	public static readonly RULE_sumExpression = 59;
	public static readonly RULE_primaryExpression = 60;
	public static readonly RULE_expressionList = 61;
	public static readonly RULE_nameValueList = 62;
	public static readonly RULE_nameValue = 63;
	public static readonly RULE_functionCallArguments = 64;
	public static readonly RULE_functionCall = 65;
	public static readonly RULE_assemblyBlock = 66;
	public static readonly RULE_assemblyItem = 67;
	public static readonly RULE_assemblyExpression = 68;
	public static readonly RULE_assemblyCall = 69;
	public static readonly RULE_assemblyLocalDefinition = 70;
	public static readonly RULE_assemblyAssignment = 71;
	public static readonly RULE_assemblyIdentifierOrList = 72;
	public static readonly RULE_assemblyIdentifierList = 73;
	public static readonly RULE_assemblyStackAssignment = 74;
	public static readonly RULE_labelDefinition = 75;
	public static readonly RULE_assemblySwitch = 76;
	public static readonly RULE_assemblyCase = 77;
	public static readonly RULE_assemblyFunctionDefinition = 78;
	public static readonly RULE_assemblyFunctionReturns = 79;
	public static readonly RULE_assemblyFor = 80;
	public static readonly RULE_assemblyIf = 81;
	public static readonly RULE_assemblyLiteral = 82;
	public static readonly RULE_subAssembly = 83;
	public static readonly RULE_tupleExpression = 84;
	public static readonly RULE_elementaryTypeNameExpression = 85;
	public static readonly RULE_numberLiteral = 86;
	public static readonly RULE_identifier = 87;
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"sourceUnit", "pragmaDirective", "pragmaName", "pragmaValue", "version", 
		"versionOperator", "versionConstraint", "importDeclaration", "standardDefinition", 
		"constraint", "importDirective", "contractDefinition", "inheritanceSpecifier", 
		"contractPart", "stateVariableDeclaration", "usingForDeclaration", "structDefinition", 
		"constructorDefinition", "modifierDefinition", "modifierInvocation", "functionDefinition", 
		"returnParameters", "modifierList", "eventDefinition", "enumValue", "enumDefinition", 
		"parameterList", "parameter", "eventParameterList", "eventParameter", 
		"functionTypeParameterList", "functionTypeParameter", "variableDeclaration", 
		"typeName", "userDefinedTypeName", "mapping", "functionTypeName", "storageLocation", 
		"stateMutability", "block", "statement", "expressionStatement", "ifStatement", 
		"whileStatement", "simpleStatement", "forStatement", "inlineAssemblyStatement", 
		"doWhileStatement", "continueStatement", "breakStatement", "returnStatement", 
		"throwStatement", "emitStatement", "variableDeclarationStatement", "variableDeclarationList", 
		"identifierList", "elementaryTypeName", "expression", "forAllExpression", 
		"sumExpression", "primaryExpression", "expressionList", "nameValueList", 
		"nameValue", "functionCallArguments", "functionCall", "assemblyBlock", 
		"assemblyItem", "assemblyExpression", "assemblyCall", "assemblyLocalDefinition", 
		"assemblyAssignment", "assemblyIdentifierOrList", "assemblyIdentifierList", 
		"assemblyStackAssignment", "labelDefinition", "assemblySwitch", "assemblyCase", 
		"assemblyFunctionDefinition", "assemblyFunctionReturns", "assemblyFor", 
		"assemblyIf", "assemblyLiteral", "subAssembly", "tupleExpression", "elementaryTypeNameExpression", 
		"numberLiteral", "identifier",
	];

	private static readonly _LITERAL_NAMES: Array<string | undefined> = [
		undefined, "'pragma'", "';'", "'^'", "'~'", "'>='", "'>'", "'<'", "'<='", 
		"'='", "'as'", "'standard'", "'{'", "'}'", "'constraint'", "'import'", 
		"'*'", "'from'", "','", "'contract'", "'interface'", "'library'", "'is'", 
		"'('", "')'", "'using'", "'for'", "'struct'", "'constructor'", "'modifier'", 
		"'function'", "'returns'", "'event'", "'enum'", "'['", "']'", "'address'", 
		"'.'", "'mapping'", "'=>'", "'memory'", "'storage'", "'calldata'", "'if'", 
		"'else'", "'while'", "'assembly'", "'do'", "'return'", "'throw'", "'emit'", 
		"'var'", "'bool'", "'string'", "'byte'", "'++'", "'--'", "'new'", "'+'", 
		"'-'", "'after'", "'delete'", "'!'", "'**'", "'/'", "'%'", "'<<'", "'>>'", 
		"'&'", "'|'", "'=='", "'!='", "'&&'", "'||'", "'?'", "':'", "'|='", "'^='", 
		"'&='", "'<<='", "'>>='", "'+='", "'-='", "'*='", "'/='", "'%='", "'ForAll'", 
		"'Sum'", "'let'", "':='", "'=:'", "'switch'", "'case'", "'default'", "'->'", 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, "'anonymous'", 
		"'break'", "'constant'", "'continue'", "'external'", "'indexed'", "'internal'", 
		"'payable'", "'private'", "'public'", "'pure'", "'view'",
	];
	private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, "Int", "Uint", "Byte", "Fixed", 
		"Ufixed", "VersionLiteral", "BooleanLiteral", "DecimalNumber", "HexNumber", 
		"NumberUnit", "HexLiteral", "ReservedKeyword", "AnonymousKeyword", "BreakKeyword", 
		"ConstantKeyword", "ContinueKeyword", "ExternalKeyword", "IndexedKeyword", 
		"InternalKeyword", "PayableKeyword", "PrivateKeyword", "PublicKeyword", 
		"PureKeyword", "ViewKeyword", "Identifier", "StringLiteral", "WS", "COMMENT", 
		"LINE_COMMENT",
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(SolidityParser._LITERAL_NAMES, SolidityParser._SYMBOLIC_NAMES, []);

	// @Override
	// @NotNull
	public get vocabulary(): Vocabulary {
		return SolidityParser.VOCABULARY;
	}
	// tslint:enable:no-trailing-whitespace

	// @Override
	public get grammarFileName(): string { return "Solidity.g4"; }

	// @Override
	public get ruleNames(): string[] { return SolidityParser.ruleNames; }

	// @Override
	public get serializedATN(): string { return SolidityParser._serializedATN; }

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(SolidityParser._ATN, this);
	}
	// @RuleVersion(0)
	public sourceUnit(): SourceUnitContext {
		let _localctx: SourceUnitContext = new SourceUnitContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, SolidityParser.RULE_sourceUnit);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 182;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << SolidityParser.T__0) | (1 << SolidityParser.T__10) | (1 << SolidityParser.T__14) | (1 << SolidityParser.T__18) | (1 << SolidityParser.T__19) | (1 << SolidityParser.T__20))) !== 0)) {
				{
				this.state = 180;
				this._errHandler.sync(this);
				switch (this._input.LA(1)) {
				case SolidityParser.T__0:
					{
					this.state = 176;
					this.pragmaDirective();
					}
					break;
				case SolidityParser.T__14:
					{
					this.state = 177;
					this.importDirective();
					}
					break;
				case SolidityParser.T__18:
				case SolidityParser.T__19:
				case SolidityParser.T__20:
					{
					this.state = 178;
					this.contractDefinition();
					}
					break;
				case SolidityParser.T__10:
					{
					this.state = 179;
					this.standardDefinition();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				this.state = 184;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 185;
			this.match(SolidityParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public pragmaDirective(): PragmaDirectiveContext {
		let _localctx: PragmaDirectiveContext = new PragmaDirectiveContext(this._ctx, this.state);
		this.enterRule(_localctx, 2, SolidityParser.RULE_pragmaDirective);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 187;
			this.match(SolidityParser.T__0);
			this.state = 188;
			this.pragmaName();
			this.state = 189;
			this.pragmaValue();
			this.state = 190;
			this.match(SolidityParser.T__1);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public pragmaName(): PragmaNameContext {
		let _localctx: PragmaNameContext = new PragmaNameContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, SolidityParser.RULE_pragmaName);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 192;
			this.identifier();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public pragmaValue(): PragmaValueContext {
		let _localctx: PragmaValueContext = new PragmaValueContext(this._ctx, this.state);
		this.enterRule(_localctx, 6, SolidityParser.RULE_pragmaValue);
		try {
			this.state = 196;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 2, this._ctx) ) {
			case 1:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 194;
				this.version();
				}
				break;
